NXP-29920: cleanup / format